--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
