--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
+    "dev": "node --watch main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
