--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.1",
     "@prisma/client": "^5.19.0",
-    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
